--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: '3.4'
 services:
   auth-app-container: 
     image: php:8.3-apache
-    restart: no
+    restart: 'no'
     volumes:
       - ./app/:/var/www/html
 
